--- a/demo.ui
+++ b/demo.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>615</width>
+    <width>817</width>
     <height>639</height>
    </rect>
   </property>
@@ -17,7 +17,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>290</x>
       <y>20</y>
       <width>251</width>
       <height>51</height>
@@ -61,7 +61,7 @@
      <rect>
       <x>170</x>
       <y>140</y>
-      <width>301</width>
+      <width>481</width>
       <height>22</height>
      </rect>
     </property>
@@ -69,7 +69,7 @@
    <widget class="QPushButton" name="pushButtonSelectFolder">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>670</x>
       <y>140</y>
       <width>101</width>
       <height>24</height>
@@ -109,62 +109,17 @@
      <rect>
       <x>170</x>
       <y>200</y>
-      <width>421</width>
+      <width>251</width>
       <height>191</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QGroupBox" name="groupBoxCodec">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>260</y>
-      <width>131</width>
-      <height>131</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Consolas</family>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="title">
-     <string>Select Codec</string>
-    </property>
-    <widget class="QRadioButton" name="radioButtonUTF8">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>40</y>
-       <width>89</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>UTF-8</string>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="radioButtonUTF16">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>90</y>
-       <width>89</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>UTF-16</string>
-     </property>
-    </widget>
    </widget>
    <widget class="QPlainTextEdit" name="plainTextEditLogs">
     <property name="geometry">
      <rect>
       <x>170</x>
       <y>420</y>
-      <width>421</width>
+      <width>611</width>
       <height>191</height>
      </rect>
     </property>
@@ -248,7 +203,7 @@
    <widget class="QPushButton" name="pushButtonDetectWindow">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>640</x>
       <y>80</y>
       <width>131</width>
       <height>24</height>
@@ -262,6 +217,41 @@
     </property>
     <property name="text">
      <string>Detect Sky Window</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>200</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Consolas</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Infor</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="plainTextInfor">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>200</y>
+      <width>231</width>
+      <height>191</height>
+     </rect>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
